--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
   },
   "scripts": {
     "predeploy": "npm run build",
-    "deploy": "REACT_APP_DEV=false gh-pages -d build",
-    "start": "REACT_APP_DEV=true react-scripts start",
+    "deploy": "gh-pages -d build",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
